--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -15,15 +15,13 @@ This chapter presents the development of a preliminary PR system that combined a
 
 \section{Virtual Heritage}
 
-Alternate reality technologies have been used for over two decades~\cite{Roussou2002} to aid in the investigation, understanding \& dissemination of information pertaining to our past in the fields of archaeology \& cultural heritage. Whilst archaeology studies human activity through the recovery of remains, heritage is also concerned with intangible attributes of society; tradition, art, narratives \& other cultural evidences~\cite{Roussou2002}. \textit{Virtual heritage} is the name given to the application of advanced imaging techniques, including alternate reality techniques, for the synthesis, conservation, reproduction, representation, reprocessing \& display of this cultural evidence~\cite{roussou:photorealism}.
+Alternate reality technologies have been used for over two decades~\cite{Roussou2002} to aid in the investigation, understanding \& dissemination of information pertaining to our past in the fields of archaeology \& cultural heritage. Whilst archaeology studies human activity through the recovery of remains, heritage is also concerned with intangible attributes of society; tradition, art, narratives \& other cultural evidences~\cite{Roussou2002}. \textit{Virtual heritage} is the name given to the application of advanced imaging techniques, including alternate reality techniques, to the synthesis, conservation, reproduction, representation, reprocessing \& display of this cultural evidence~\cite{roussou:photorealism}.
 
-These techniques provide access to locations \& artefacts scatted about the world, that may reside in private collections inaccessible to scholars (let alone interested amateurs) \& outwith of their original context of creation~\cite{griffin:recovering}. Many cultural heritage objects are deteriorating \& are at risk of being lost, both due to natural causes such as weather \& natural disasters but also due to acts of man such as civil war~\cite{Ikeuchi2003}.
+These techniques provide access to locations \& artefacts scatted about the world, that may reside in private collections inaccessible to scholars (let alone interested amateurs) \& outwith of their original context of creation~\cite{griffin:recovering}. They allow recreations to be made of the numerous cultural heritage objects that are deteriorating or are at risk of being lost, both due to natural causes such as weather \& natural disasters but also due to acts of man such as civil war~\cite{Ikeuchi2003}.
 
-Virtual heritage techniques offer substantial benefits to collaborative investigation of sites, where multiple users are provided the ability to collaborate via a multitude of different visualization modalities including video see-through, head-tracked head mounted displays, projected table surfaces, large screen displays \& tracked hand-held displays, including the ability for experts physically located at a particular site to collaborate with those remote to it~\cite{benko:collaborative}.
+Virtual heritage techniques offer substantial benefits to collaborative investigation of sites, where multiple users are provided the ability to collaborate via a multitude of different visualization modalities including video see-through head-tracked head mounted displays, projected table surfaces, large screen displays \& tracked hand-held displays, including the ability for experts physically located at a particular site to collaborate with those remote to it~\cite{benko:collaborative}. The combination of different techniques like this not only benefits experts, but has also been used in the creation of a contiguous platform for building \& managing exhibitions of 3D models of artefacts accessed in museums, galleries \& via the Web via Web3D technologies~\cite{Wojciechowski2004}, focussed not only on the digitization \& subsequent interaction with such content to aid its preservation \& protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians \& casual citizens)~\cite{walczak:applications}.
 
-The combination of different techniques not only benefits experts, but has also been used in the creation of a contiguous platform for building \& managing exhibitions of 3D models of artefacts accessed in museums, galleries \& via the Web via Web3D technologies~\cite{Wojciechowski2004}, focussed not only on the digitization \& subsequent interaction with such content to aid its preservation \& protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians \& casual citizens)~\cite{walczak:applications}. Even traditionally two-dimensional visual resources associated with cultural heritage can be integrated into such state-of-the-art systems, visualized via immersive CAVE techniques as part of `information landscapes'~\cite{Ruffaldi2008}.
-
-Virtual heritage is of particular benefit to young people as cultural heritage sites often arouse little involvement in them, especially if the site's present day appearance bears few traces of its original stature \& makes it difficult to appreciate its original splendour \& importance~\cite{ardito:combining}.
+Even traditionally two-dimensional visual resources associated with cultural heritage can be integrated into such state-of-the-art systems, visualized via immersive CAVE techniques as part of `information landscapes'~\cite{Ruffaldi2008}. Virtual heritage is of particular benefit to young people as cultural heritage sites often arouse little involvement in them, especially if the site's present day appearance bears few traces of its original stature \& makes it difficult to appreciate its original splendour \& importance~\cite{ardito:combining}.
 
 %=========================================================================================================
 
@@ -31,20 +29,20 @@ Virtual heritage is of particular benefit to young people as cultural heritage s
 
 Due to the number of combinations \& diversity in approaches that have been used in the application of visualization techniques to the cultural heritage sector, attempting to comprehensively list them is impractical. Comparison via a taxonomical model that classifies approaches according to various characteristics is thus the approach adopted by Foni et al.~\cite{Foni2010} which produced the taxonomical space shown by figure \ref{taxonomy_1.png}.
 
-This model classifies visualization strategies according to four continua, represented by the three physical dimensions of the 3D cube \& the degree of shading of each point within the cube. The x axis represents the level of automatism, which refers to the span of development cycle required to produce the visualization; the y axis represents the level of precision, referring not only to the amount of geometrical detail but to all elements that can contribute to or enhance the reliability; \& the z axis represents the level of interactivity, defined in this context as;
-
-\begin{quote}
-	\textit{``its capacity to contextually offer the possibility to subjectively experience an interactive behaviour in a synchronous way, thus enabling the user the opportunity to meaningfully contribute to a given experience or to affect in real time the visualized  item''}.
-\end{quote}
-
-Finally, the shading of each point within the cube represents its degree of virtuality, conceptually analogous to the reality-virtuality continuum of Milgram et al. (see section \ref{milgram&kishino}) with real world/world unmodelled represented as solid black, virtual reality/world completely modelled as completely white \& positions as increasing/decreasing shades of grey.
-
 \begin{figure}[h]
 \centering
   \includegraphics[width=.7\linewidth]{taxonomy_1.png}
-  \caption{Taxonomical space of visualization strategies for cultural heritage applications.}
+  \caption{Taxonomical space of visualization strategies used in cultural heritage.}
   \label{taxonomy_1.png}
 \end{figure}
+
+This model classifies visualization strategies according to four continua, represented by the three physical dimensions of the 3D cube \& the degree of shading of each point within the cube. The x axis represents the level of automatism, which refers to the span of the development cycle required to produce the visualization; the y axis represents the level of precision, referring not only to the amount of geometrical detail but to all elements that can contribute to or enhance reliability; \& the z axis represents the level of interactivity, defined in this context as;
+
+\begin{quote}
+	\textit{``its capacity to contextually offer the possibility to subjectively experience an interactive behaviour in a synchronous way, thus enabling the user the opportunity to meaningfully contribute to a given experience or to affect in real time the visualized  item''}~\cite{Foni2010}.
+\end{quote}
+
+The shading of each point within the cube represents its degree of virtuality, conceptually analogous to the reality-virtuality continuum of Milgram et al. (see section \ref{milgram&kishino}) with real world/world unmodelled represented as solid black, virtual reality/world completely modelled as completely white \& positions inbetween as varyious shades of grey.
 
 The position of 16 exemplar visualization techniques applied to cultural heritage are shown upon the cube \& explained via the table figure \ref{taxonomy_2.png}, including both traditional techniques \& state-of-the-art methodologies.
 
@@ -57,11 +55,11 @@ The position of 16 exemplar visualization techniques applied to cultural heritag
 
 %=========================================================================================================
 
-AR has been used to add artefacts, actors \& reconstructed architecture to views of present day sites that are still accessible \& may bear traces of their original status, whilst VR has been used to host more complete reconstructions of entire buildings \& settlements for interaction via screen, HMD \& CAVE, including where the present day site bears no evidence of its past status or is inaccessible for some reason (due to latter development, change in landscape, etc.).
+In terms of alternate reality techniques, real time AR simulations (category 13 in figure \ref{taxonomy_2.png}) have been used to add artefacts, actors \& reconstructed architecture to views of present day sites that are still accessible \& may bear traces of their original status, whilst real time VR simulations (category 10 in figure \ref{taxonomy_2.png}) have been used to host more complete reconstructions of entire buildings \& settlements for interaction via screen, HMD \& CAVE, including where the present day site bears no evidence of its past status or is inaccessible for some reason (due to latter development, change in landscape, etc.).
 
 The ARCHEOGUIDE project (Augmented Reality-based Cultural Heritage On-site GUIDE)~\cite{vlahakis:archeoguide} aimed to provide a `personalized electronic guide \& tour assistant' to cultural heritage site visitors. On-site help \& augmented reality reconstructions of on-site ruins were presented via a laptop, a tablet computer \& a PDA, using GPS for location tracking \& magnetometer to ascertain direction such that augmentations could be placed accordingly. The applications claimed to be supported by the platform range from archaeological research to education, multimedia publishing \& cultural tourism. The platform was prototyped at the archaeological site of Olympia, Greece.
 
-As well as being used for walking tours, augmented reality has been combined with the concept of telepresence to create `augmented telepresence', allowing participants to experience a `fly-through' of the ancient Nara Heijo-kyo capital of Japan, by combining aerially captured omnidirectional video augmented with related information using AR techniques~\cite{Okura2006,Okura2011}.
+As well as being used for walking tours, AR has been combined with the concept of telepresence to create `augmented telepresence', allowing participants to experience a `fly-through' of the ancient Nara Heijo-kyo capital of Japan, by combining aerially captured omnidirectional video augmented with related information using AR techniques~\cite{Okura2006,Okura2011}.
 
 Augmenting views of the real world with real-time animated virtual humans has been explored by several projects, including the LIFEPLUS EU IST project, which aimed to produce ``an innovative 3D reconstruction of ancient frescos-paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial life dramaturgical behaviors, in an immersive AR environment''. This project pushed established augmented reality applications to the field by exploring narrative design in fictional spaces, with the aim of increasing immersion via realistic interaction, making use of captured/real-time video of a real scene~\cite{Papagiannakis2004}, presenting the visitor with ``an immersive and innovative multi-sensory interactive trip to the past''~\cite{Papagiannakis2005}. These realistic simulations of animated virtual human actors were employed in a mobile \& wearable setup, in abandonment of traditional concepts of static cultural artefacts or rigid augmentations of real world features, making use of a markerless camera tracker \& mixed reality illumination model for more consistent real-virtual \& virtual-real rendering. This platform was demonstrated in a case study on the real site of ancient Pompeii \& whilst initially targetted at the cultural heritage sector, the author(s) clarifies that as a platform it in no way limited to use with such subjects~\cite{Papagiannakis2007}. This concept of extending rigid \& static AR with character-based event representations hopes to recreate not just discrete artefacts but the entirety of `daily life' at the scene~\cite{Papagiannakis2009}.
 
@@ -78,83 +76,56 @@ Emphasis on photorealistic graphical quality also has considerations when it com
 %=========================================================================================================
 
 \section{Virtual Heritage at the University of St Andrews}
-The Open Virtual Worlds (OVW) research group at the School of Computer Science at the University of St Andrews has been employed in virtual heritage projects since 2007~\cite{Getchell2007}, producing a number of reconstructions of cultural heritage sites in Scotland \& further afield. These reconstructions have been produced through collaborations with academics from the university's Art History, History \& Archaeology departments as well as with domain experts from heritage organisations including Historic Scotland \& the National Trust for Scotland.
+The Open Virtual Worlds (OVW) research group at the School of Computer Science at the University of St Andrews has been employed in virtual heritage projects since 2007~\cite{Getchell2007}, producing a number of reconstructions of cultural heritage sites in Scotland \& further afield. These reconstructions have been produced through collaborations with academics from the university's Art History, History \& Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland \& the National Trust for Scotland.
 
-These projects range from small reconstructions of a church to much larger reconstructions such as that of the cathedral at St Andrews (figure \ref{cathedral_real_outside.jpg}, \ref{cathedral_reconstruction_above.jpg}), which represents several years of work~\cite{Kennedy2013}. Some of these projects were built as research projects (the cathedral), others for use in schools in Scotland (Linlithgow palace, figure \ref{linlithgow_real.jpg}, \ref{linlithgow_reconstruction.png}), others for outreach purposes (Mosfell Viking farmstead) \& still others were built specifically for installation into museums (St Kilda, Caen Township, Eyemouth Fort).
-
-
-These reconstructions were made using the OpenSim server, an open source implementation \& extension of the Second Life platform which is compatible with the numerous forks of the Second Life client program.
-
-This architecture was adopted due to the ease \& convenience with which it allowed the construction \& dissemination of the models, thanks to the OpenSim client/server model allowing the models to be accessed in various deployment scenarios including temporary deployments within 
-
-Some of these reconstructions are inhabited with virtual humans that are scripted to perform certain actions specific to the role at the site that they are depicting (figure \ref{cathedral_npc_standing.png}, \ref{cathedral_npc_talking.png}).
-
-
+These projects range from small reconstructions of a church to much larger reconstructions such as that of the cathedral at St Andrews (figure \ref{cathedral_real_outside.jpg}, \ref{cathedral_reconstruction_above.jpg}) which represents several years of work~\cite{Kennedy2013}. Whilst the cathedral was completed as a research project, others were produced specifically for use in schools in Scotland (such as Linlithgow palace, figure \ref{linlithgow_real.jpg}, \ref{linlithgow_reconstruction.png}), others were produced for outreach purposes (Mosfell Viking farmstead, figure \ref{mosfell_outside.jpg}, \ref{mosfell_inside.jpg}) \& still others were built specifically for installation into museums (Caen Township, figure \ref{caen_township_outside.jpg}, \ref{caen_township_inside_wireframe.jpg}).
 
 \TwoFig{cathedral_real_outside.jpg} {St Andrews cathedral today.} {cathedral_real_outside.jpg}
        {cathedral_reconstruction_above.jpg} {St Andrews cathedral reconstruction.} {cathedral_reconstruction_above.jpg}
 
+\TwoFig{linlithgow_real.jpg} {Linlithgow Palace today.} {linlithgow_real.jpg}
+       {linlithgow_reconstruction.png} {Linlithgow Palace reconstruction.} {linlithgow_reconstruction.png}
+
+\TwoFig{mosfell_outside.jpg} {Mosfell Viking Longhouse.} {mosfell_outside.jpg}
+	   {mosfell_inside.jpg} {Longhouse interior.} {mosfell_inside.jpg}
+
+\TwoFig{caen_township_outside.jpg} {Caen Township.} {caen_township_outside.jpg}
+       {caen_township_inside_wireframe.jpg} {Caen Township wireframe detail.} {caen_township_inside_wireframe.jpg}
+
+Some of these reconstructions are inhabited with virtual humans that are scripted to perform certain actions specific to the role they depict at the site (figure \ref{cathedral_npc_standing.png}, \ref{cathedral_npc_talking.png}).
 
 \TwoFig{cathedral_npc_standing.png} {Virtual humans in cathedral reconstruction.} {cathedral_npc_standing.png}
        {cathedral_npc_talking.png} {Conversing with virtual humans.} {cathedral_npc_talking.png}
 
-%\TwoFig{} {} {}
-%       {} {} {}
+\textbf{***Kris Getchell's stuff here? ***interactive, collaborative, experiential learning?}
 
+These reconstructions were made using the OpenSim server, an open source implementation \& extension of the Second Life platform which is compatible with the numerous forks of the Second Life client program. This architecture allows straightforward construction \& dissemination of the models, thanks to accessible modelling tools provided by the Second Life client itself \& the client/server model that allows the models to be accessed in various deployment scenarios including temporary deployments within controlled network \& clienet conditions as well as via the Internet.
 
-\TwoFig{linlithgow_real.jpg} {Linlithgow Palace today.} {linlithgow_real.jpg}
-       {linlithgow_reconstruction.png} {Linlithgow Palace reconstruction.} {linlithgow_reconstruction.png}
+The reconstruction process involves the use of Geographic Information System (GIS) data from Ordnance Survey (OS) to accurately model the basic elevation of the ground. Where there is higher resolution elevation data, such as from Lidar laser surveying often employed on archaeological surveys, this is used to increase the accuracy of the resultant reconstruction. Where access to the site is possible \& depending upon development surrounding the site prior to the date being reconstructed, 360\textdegree panoramic photographs are captured \& then used to create a backdrop for the reconstruction, allowing identifiable aspects of the surrounding environment to improve the experience of the reconstruction.
 
-\TwoFig{mosfell_outside.jpg} {Mosfell Viking Longhouse} {mosfell_outside.jpg}
-	   {mosfell_inside.jpg} {Wireframe rendering of longhouse} {mosfell_inside.jpg}
+Buildings/structures are then reconstructed upon the ground layer, using numerous sources as input; satellite views, archaeological surveys, contemporary accounts, views of the site itself if relics still exist, photographic evidence, etc. Domain experts are then brought in to iteratively improve the model, commenting on aspects of the reconstruction to be altered in order to visualise a different reconstructive hypothesis.
 
-%mosfell_outside.jpg
-%mosfell_inside.jpg
+These reconstructions have been used to host workshops at 10 schools throughout Scotland, both at primary \& at secondary institutions, where all requisite computing infrastructure was taken, assembled at the school, then disassembled \& removed at the end of the day. Students are split into groups of 4-5, sharing a computer with screen, keyboard, mouse \& Xbox controller (a control modality instantly recognised by most school students). Worksheets with tasks are used to structure their interaction with the reconstructions \& guide the experiential learning experience over 20-40 minute sessions (figure \ref{linlithgow_children.jpg}). Similar workshops have also been performed in museums, using the same approach of temporary setups of computing hardware (figure \ref{musa.jpg}).
 
-%caen_township_outside.jpg
-%caen_township_inside_wireframe.jpg
+In addition to these temporary workshops, the reconstructions have also been used in permanently installed exhibits in museums \& visitor centres, including the Virtual Time Travel Project (VTTP), which combines multi-head projection with Natural User Interaction (NUI) via Microsoft Kinect, which has been installed at the Timespan Museum \& Arts Centre in Helmsdale, allowing visitors to explore the reconstruction of the Caen Township by using simple gestures, instead of relying upon a keyboard, game controller or other traditional interface (figure \ref{VTTP_projection.jpg}).
 
-models
-	pictures
+\TwoFig{linlithgow_children.jpg} {School students learning via a reconstruction.} {linlithgow_children.jpg}
+       {VTTP_projection.png} {VTTP installation at Timespan.} {VTTP_projection.png}
 
+\TwoFig{rift_exhibition.jpg} {OVW via Oculus Rift.} {rift_exhibition.jpg}
+       {musa.jpg} {Museum workshop.} {musa.jpg}
 
-
-how they are made, what technologies are used
-	Second Life/OpenSim
-	
-process
-	GIS data to create landscape (Ordnance Survey high resolution elevation maps)
-	LIDAR or GPS surveys if these exist for the site due to a previous archaeological investigation
-	measurements from various sources for the structures; online mapping/satellite views, archaeological surveys, contemporary accounts, views of the site (if anything still exists), photographs
-	experts are then used to iteratively improve the model, trying out various hypotheses to find the most applicable
-	360 panorama photos are used for the background
-	
-	
-	
-how they are used
-	workshops at schools \& museums, where everything is taken \& set up then torn down at the end of the day
-		using screens, xbox controllers, mouse \& keyboard, sometimes Rift, shared by a small group \& given a worksheet with tasks on, usually 20-40 minutes long, mention `experiential learning'
-		pictures
-		10 schools, both primary \& secondary, have hosted one or more developments
-	John's work
-		permanent installation
-		using multihead projection \& NUI
-		pictures
-how these dissemination styles fit into the 4D model
-
-bring in concept of local sites \& the physical separation between the school \& the site (especially Madras \& the cathedral)
-
-
-Background into the content that the group has produced, how it produced it, how it uses it, talk about different ways of interacting with it (including John's Kinect stuff, school children using \& enjoying Rift).
-
-Lots of pictures of virtual content \& of people experiencing this content via the different interaction methods.
-
-
-
+In addition to traditional computer screens, larger LCD television screens \& still larger projection screens, the Oculus Rift VR headset has started to be used with this same content~\ref{rift_exhibition.jpg}.
 
 %=========================================================================================================
 
 \section{The Virtual Time Window}
+
+The dissemination of the OVW group's content introduced thus far in the previous section falls into categories 10-12 of figure \ref{taxonomy_2.png}.
+
+We don't necessarily want AR
+
+Previous alternate reality applications to cultural heritage have really either been AR, experienced on site, or VR, experienced with both spatial \& temporal separation from the site (should it still exist \& be accessible).
 
 \textbf{***Where does VTW fit in the 4D model given above?}
 
@@ -162,11 +133,15 @@ Introduce basic concept of VTW.
 
 Talk about how previous alternate reality projects in cultural heritage have either been on-site AR, or VR with temporal/spatial separation. VTW allows on-site VR with no temporal/spatial separation. Bring in separation between Madras \& the cathedral.
 
+bring in concept of local sites \& the physical separation between the school \& the site (especially Madras \& the cathedral)
+
 %=========================================================================================================
 
 \subsection{The Virtual Time Window within PR}
 
 How with VTW we have a small `window' into the virtual, which is then surrounded by the real. So unlike Mirrorshades which is about distributing attention by time (one environment, then the other), VTW is about distributing attention by gaze/place (different parts of a single view/combined environment).
+
+\textbf{***Why is PR good for virtual heritage? In particular, talk about spatial equivalence.}
 
 %=========================================================================================================
 
