--- a/thesis.tex
+++ b/thesis.tex
@@ -11,6 +11,9 @@
 %compresses ranges of citations eg [1, 2, 3, 4, 5] becomes [1-5]
 \usepackage[numbers,sort&compress]{natbib}
 
+%degree symbol via \textdegree
+\usepackage{textcomp}
+
 \usepackage{draftwatermark}
 \SetWatermarkScale{7}
 \SetWatermarkLightness{0.9}
@@ -103,6 +106,14 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \tableofcontents
+
+% ======= ======= ======= ======= ======= ======= =======
+
+\listoffigures
+
+% ======= ======= ======= ======= ======= ======= =======
+
+%\listoftables
 
 % ======= ======= ======= ======= ======= ======= =======
 
