--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -40,7 +40,7 @@ Alternate realities, any situations in which the environmental stimuli received 
 
 This chapter investigates popular definitions, classifications \& comparisons of alternate realities, combining \& modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, allowing \textit{parallel reality} to be introduced into a sound classification framework.
 
-The concept of \textit{telepresence} is not included in this discussion, as it is not deemed representative of an \textit{alternate} reality but rather the ability for a user to experience a sense of presence at a real location remote to them~\cite{Sheridan1992a}. \textbf{***Check that this is a valid citation for this!}
+The concept of \textit{telepresence} is not included in this discussion, as it is not deemed representative of an \textit{alternate} reality but rather the ability for a user to experience a sense of presence at a real location remote to them~\cite{Sheridan1992a}. \textbf{***Check that this is a valid citation for this, Presence issue 1 photocopy}
 
 \subsection{Milgram et al.'s Reality-Virtuality Continuum}
 \label{milgram&kishino}
