--- a/thesis.tex
+++ b/thesis.tex
@@ -18,6 +18,8 @@
 \SetWatermarkScale{7}
 \SetWatermarkLightness{0.9}
 
+\usepackage{url}
+
 \renewcommand{\chaptername}{}
 
 % Renders two imagegs side-by-side & scales them so height is identical
@@ -157,6 +159,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \chapter*{Appendices}
+
 \addcontentsline{toc}{chapter}{Appendices}
 
 % ======= ======= ======= ======= ======= ======= =======
