--- a/thesis.tex
+++ b/thesis.tex
@@ -20,6 +20,9 @@
 
 \usepackage{url}
 
+%for sourc code snippets1
+\usepackage{listings}
+
 \renewcommand{\chaptername}{}
 
 % Renders two imagegs side-by-side & scales them so height is identical
