--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -134,6 +134,8 @@ Whilst this will intuitively make transitions easier to perform \& create less r
 
 \subsection{Second Life \& Mobility}
 
+\label{SecondLifeMobility}
+
 \newcommand{\LumiyaFootnote}{\footnote{\url{https://play.google.com/store/apps/details?id=com.lumiyaviewer.lumiya&hl=en_GB}}}
 
 \newcommand{\WindpadFootnote}{\footnote{\url{http://www.msi.com/product/windpad/WindPad-110W.html}}}
@@ -170,22 +172,22 @@ The Second Life client, intended for use on a desktop or laptop computer, provid
 
 %=====================
 
-In order to control Second Life's camera in the fashion required of VTW, sensor data is required for the orientation in which the user is holding the tablet. Specifically, the tablet's yaw \& pitch are needed; roll is less important as it is conceived that the user will generally hold the tablet roughly level with the horizon when looking `through' it.
+In order to control Second Life's camera in the fashion required of VTW, sensor data are required for the orientation in which the user is holding the tablet. Specifically, the tablet's yaw \& pitch are needed; roll is less important as it is conceived that the user will generally hold the tablet roughly level with the horizon when looking `through' it.
 
 VTW considers yaw in terms of magnetic compass bearing, as this provides a value that can be used to directly control the yaw of the virtual camera while the virtual reconstruction within OpenSim is correctly oriented to OpenSim's own compass. Magnetic compass bearings are sensed electronically via a 3-axis microelectromechanical (MEMS) magnetometer, which measures the strength of magnetic field being experienced along each of its 3 axes. By comparing the values of each axis to the known direction of the field lines of Earth's magnetic field, a compass bearing relative to the magnetometer's orientation can be calculated. Pitch is sensed using a 3-axis MEMS accelerometer, which measures force of acceleration along each of its 3 axes. In the case of static or slow moving applications, this acceleration is predominantly that caused by the Earth's gravitational pull \& by comparing the values of each axis the direction of this acceleration (down toward the centre of the Earth) can be determined in relation to the orientation of the accelerometer itself \& thus the accelerometer's own orientation can be deduced.
 
-Due to the fact that the WindPad tablet does not feature a built-in magnetometer \& its built-in accelerometer is little more than a rudimentary tilt sensor for differentiating between discrete cases of landscape and portrait orientation for screen rotation, it was necessary to interface external magnetometer \& accelerometer sensors. The popular Arduino\ArduinoFootnote{} microcontroller platform was used for prototyping with several different sensor packages, including the MMA8452\MMAfootnote{}, the ADXL335\ADXLfootnote{} \& the HMC5883L\HMCfootnote{}. The package adopted for use with VTW from this prototyping stage was the HMC6343\HMCtwoFootnote{}, which combines a 3-axis MEMS magnetometer \& 3-axis MEMs accelerometer into a single package, along with algorithms to internally apply the accelerometer's readings to `tilt compensate' the magnetometer's readings. A magnetometer used alone is only capable of providing a meaningful compass bearing when held level. In the case of applications where a compass bearing is required of a device that is not maintained level, such as in the case of VTW, the non-level orientation of the device must be taken into account to offset the readings of the magnetometer \& provide a correct compass bearing. The HMC6343's combination of magnetometer, accelerometer \& algorithms provides a single package that internally performs this process, using the readings from its accelerometer to compensate the readings from its magnetometer \& provide a meaningful compass bearing in non-level orientations.
+Due to the fact that the WindPad tablet does not feature a built-in magnetometer \& its built-in accelerometer is little more than a rudimentary tilt sensor for differentiating between discrete cases of landscape and portrait orientation for screen rotation, it was necessary to interface external magnetometer \& accelerometer sensors. The popular Arduino\ArduinoFootnote{} microcontroller platform was used for prototyping with several different sensor packages, including the MMA8452\MMAfootnote{}, the ADXL335\ADXLfootnote{} \& the HMC5883L\HMCfootnote{}. The package adopted for use with VTW from this prototyping stage was the HMC6343\HMCtwoFootnote{}, which combines a 3-axis MEMS magnetometer \& 3-axis MEMs accelerometer into a single package, along with algorithms to internally apply the accelerometer's readings to `tilt compensate' the magnetometer's readings. Figure \ref{arduino_wiring_hmc.png} provides a wiring diagram for connectivity of a HMC6343 to an Arduino Uno R3, with the pinout values provided by figure \ref{HMC6343wiringtable} \& Figure \ref{arduino_joystick_for_second_life_1.jpg} shows an assembled unit.
 
-Further requirements for obtaining accurate compass bearings from a MEMS magnetometer are to account for distortions to the magnetic field it senses \& to compensate the bearings it reports for the amount of magnetic declination for the location \& date that the magnetometer is being used at. Various materials that influence magnetic fields or produce their own magnetic field will distort the Earth's magnetic field \& thus impact the readings that a MEMS magnetometer collects. In the case of VTW, the sources of primary consideration are the electronics of the Arduino, tablet \& associated wiring. Due to the nature of these sources \& the fact that they are permanently situated \& attached to the same frame of reference as the magnetometer, moving as it moves, the distortions can be mitigated using a hard iron offset approach. Magnetic declination refers to the difference between `magnetic north' \& geographic `true north'. This value varies depending upon world location \& changes over time, so must be updated when the magnetometer is deployed to a different location or used at a subsequent date.
+\begin{figure}[h]
+\centering
+  \includegraphics[width=\linewidth]{arduino_wiring_hmc.png}
+  \caption{Example wiring for Arduino with HMC6343 for joystick operation.}
+  \label{arduino_wiring_hmc.png}
+\end{figure}
 
-%***Reference for hard iron offset - here or later where we talk about the hex?
+%=====================
 
-%=========================================================================================================
-
-\subsection{Exploiting Second Life's Joystick Support}
-
-%Magnetic declination information was entered into the HMC6343 for the position of the cathedral and the date of our experiments. The HMC6343's hard-iron offset calculation feature was used each time the hardware configuration was altered. The sampling frequency of the HMC6343 was set to its highest value of 10Hz. Orientation was set to `upright front' to match the physical orientation of the IC in the experiments.
-
+\begin{figure}[h]
 \begin{center}
 \begin{tabular}{| c | c |}
 
@@ -213,22 +215,57 @@ SCL & A5 \\
 
 \end{tabular}
 \end{center}
-
-Leveraging standard SL avatar/camera control interfaces was explored by programming the Arduino to mimic a standard USB HID joystick via the Lightweight USB Framework for AVRs (LUFA), sending messages that the viewer interpreted as coming from a joystick and allowing the use of the standard joystick options.
-
-\begin{figure}[h]
-\centering
-  \includegraphics[width=\linewidth]{arduino_wiring_hmc.png}
-  \caption{Example wiring for Arduino with HMC6343 for joystick operation.}
-  \label{arduino_wiring_hmc.png}
+\caption{Pin designation for figure \ref{arduino_wiring_hmc.png}}
+\label{HMC6343wiringtable}
 \end{figure}
+
+%=====================
 
 \begin{figure}[h]
 \centering
   \includegraphics[width=.7\linewidth]{arduino_joystick_for_second_life_1.jpg}
-  \caption{Assembled Arduino + HMC6343 `joystick'.}
+  \caption{Assembled Arduino Uno R3 + HMC6343.}
   \label{arduino_joystick_for_second_life_1.jpg}
 \end{figure}
+
+A magnetometer used alone is only capable of providing a meaningful compass bearing when held level. In the case of applications where a compass bearing is required of a device that is not maintained level, such as in the case of VTW, the non-level orientation of the device must be taken into account to offset the readings of the magnetometer \& provide a correct compass bearing. The HMC6343's combination of magnetometer, accelerometer \& algorithms provides a single package that internally performs this process, using the readings from its accelerometer to compensate the readings from its magnetometer \& provide a meaningful compass bearing in non-level orientations.
+
+Further requirements for obtaining accurate compass bearings from a MEMS magnetometer are to account for distortions to the magnetic field it senses \& to compensate the bearings it reports for the amount of magnetic declination for the location \& date wherein it is being used. Various materials that influence magnetic fields or produce their own magnetic field will distort the Earth's magnetic field \& thus impact the readings that a MEMS magnetometer collects. In the case of VTW, the sources of primary consideration are the electronics of the Arduino, tablet \& associated wiring. Due to the nature of these sources \& the fact that they are permanently situated \& attached to the same frame of reference as the magnetometer, moving as it moves, the distortions can be mitigated using a hard iron offset approach. Magnetic declination refers to the difference between `magnetic north' \& geographic `true north'. This value varies depending upon world location \& changes over time, so must be updated when the magnetometer is deployed to a different location or used at a subsequent date.
+
+%***Reference for hard iron offset - here or later where we talk about the hex?
+
+%=========================================================================================================
+
+\subsection{Exploiting Second Life's Joystick Support}
+
+\newcommand{\ArduinoJoystickVideoFootnote}{\footnote{Video - \url{https://www.youtube.com/watch?v=-ddtmqoGNmg}}}
+
+\newcommand{\atmegaFootnote}{\footnote{\url{http://www.atmel.com/devices/ATMEGA16U2.aspx}}}
+
+\newcommand{\atmegaTFootnote}{\footnote{\url{http://www.atmel.com/devices/atmega328.aspx}}}
+
+%=====================
+
+As highlighted in section \ref{SecondLifeMobility} the Second Life client can be controlled only via mouse, keyboard \& joystick. Using the HMC6343's compass bearing \& yaw values therefore requires one of two approaches;
+
+\begin{enumerate}
+	\item Encapsulating the compass bearing \& yaw values into mouse, keyboard \&/or joystick commands;
+	\item Modification to the Second Life client to allow the compass bearing \& yaw values to be used directly at a lower level of abstraction.
+\end{enumerate}
+
+Method 1 has the advantage of having no reliance upon any particular Second Life client, as all available clients are forks of the official client from Linden Lab \& maintain the same keyboard, mouse \& joystick interfaces. However if the level of control attainable by re-purposing these interfaces for control from magnetometer \& accelerometer data is not enough, method 2 will be the only option.
+
+The Arduino Uno R3 features an ATMega16U2\atmegaFootnote{} microcontroller that serves as a USB-to-serial bridge between the Arduino's central ATmega328\atmegaTFootnote{} microntroller \& the host computer. In its stock state, the ATMega16U2's firmware simply serves to allow communication between the ATMega328 (which has no native USB interface) \& a modern computer where USB connections are commonplace, appearing to the host computer's operating system as a generic USB-to-serial bridge.
+
+The ATMega16U2 can have its firmware modified/replaced to perform other tasks. Such as pretending to be a USB joystick
+
+
+
+
+
+Leveraging standard SL avatar/camera control interfaces was explored by programming the Arduino to mimic a standard USB HID joystick via the Lightweight USB Framework for AVRs (LUFA), sending messages that the viewer interpreted as coming from a joystick and allowing the use of the standard joystick options.
+
+%Magnetic declination information was entered into the HMC6343 for the position of the cathedral and the date of our experiments. The HMC6343's hard-iron offset calculation feature was used each time the hardware configuration was altered. The sampling frequency of the HMC6343 was set to its highest value of 10Hz. Orientation was set to `upright front' to match the physical orientation of the IC in the experiments.
 
 \begin{figure}[h]
 \centering
@@ -244,6 +281,11 @@ However the granularity of control attainable via this method was not sufficient
 \section{Position Control}
 
 \textbf{***Include HEX whatnot from Arduino code}
+
+\textbf{***Include Haversine as pseudocode(?), RegionModule code \& Second Life client modification}
+
+%\begin{figure}[h!tbp]
+%\begin{lstlisting}[language=Java, numbers=left, numberstyle=\tiny, stepnumber=5]
 
 The user's position is monitored using GPS, a solution which is well suited to applications of the system within the use case of cultural heritage; such sites often constitute outdoor ruins at which a clear view of the sky allows for good GPS connectivity. For use cases where a similar modality of interaction is desired whilst indoors then an indoor positioning system would be used; a roundup of such technologies is available in~\cite{Mautz2012}.
 
