--- a/thesis.tex
+++ b/thesis.tex
@@ -22,10 +22,24 @@
 
 %for sourc code snippets1
 \usepackage{listings}
+\usepackage{color}
+\definecolor{codebackground}{rgb}{0.9,0.9,0.9}
+
+%\begin{figure}[h]
+%\begin{lstlisting}[language=Java, numbers=left, numberstyle=\small, stepnumber=5, frame=single, breaklines=true, backgroundcolor=\color{codebackground}, showstringspaces=false]
+%
+%\end{lstlisting}
+%\end{figure}
+
+%for formula \text{}
+\usepackage{amsmath}
+
+%tables that allow footnotes
+\usepackage{tabularx}
 
 \renewcommand{\chaptername}{}
 
-% Renders two imagegs side-by-side & scales them so height is identical
+% Renders two images side-by-side & scales them so height is identical
 %
 %\TwoFig{} {} {}
 %       {} {} {}
